# bluesnap

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release.config.js
.github/: dependabot.yml
.github/workflows/: build.yaml  claude-code-review.yaml  dependabot-uv-lock.yaml
bluesnap/: __init__.py  bluetooth_controller.py  config.py  mqtt_bridge.py  snapcast_bridge.py  telemetry.py  utils.py
config/: bluesnap.conf.sample
scripts/: bluesnap-boot.sh  bluesnap_service.py  bt_tools.py  setup.py
systemd/: bluesnap.service
