[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "bluesnap"
version = "0.1.0"
description = "Snapcast-to-Bluetooth bridge with MQTT v5 telemetry for Home Assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Bluesnap Contributors"}]
dependencies = [
    "aiosyslog>=0.1.9",
    "dbus-next>=0.2.3",
    "paho-mqtt>=2.1.0",
    "psutil>=7.2.2",
    "pydantic>=2.13.0",
    "pyyaml>=6.0.3",
    "snapcast>=2.3.7",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[project.scripts]
bluesnap-service = "scripts.bluesnap_service:main"
bluesnap-setup = "scripts.setup:main"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "(bluesnap|scripts|tests)/.*\\.py$"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "BLE", "UP"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
pythonpath = ["."]
